k8s/ckey/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckey
  labels:
    app: ckey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ckey
  template:
    metadata:
      labels:
        app: ckey
    spec:
      containers:
      - name: ckey
        image: bartosz95/ckey
        args: ["start --import-realm --optimized"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
        volumeMounts:
        - name: dice-game-realm-json
          mountPath: "/opt/keycloak/data/import"
          readOnly: true
      volumes:
      - name: dice-game-realm-json
        configMap:
          name: ckey-dice-game-realm-json
