k8s/ckey/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ckey
  labels:
    app: ckey
spec:
  ports:
  - name: service-port
    port: 80
    protocol: TCP
    targetPort: container-port
  selector:
    app: ckey
  type: LoadBalancer
